--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pmactavish13/word-guess-node#readme",
   "dependencies": {
+    "colors": "^1.2.1",
     "inquirer": "^5.2.0",
     "is-letter": "^1.1.1",
     "random-words": "^1.0.0"
